--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,9 +1,11 @@
-<div ng-include="'components/navbar/navbar.html'"></div>
+<!-- <div ng-include="'components/navbar/navbar.html'"></div> -->
 
 <header class="hero-unit" id="banner">
   <div class="container">
     <h1>'Allo, 'Allo!</h1>
-    <p class="lead">Kick-start your next web app with Angular Fullstack</p>
+    <a ng-click="loginWithFacebook()">
+    	<img src="/assets/images/facebook.png" />
+	</a>
   </div>
 </header>
 
